--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -30,3 +30,14 @@
     overflow-y: auto;
   }
 }
+
+.language-button {
+  border: none;
+  text-transform: uppercase;
+  position: fixed;
+  top: 50px;
+  right: 50px;
+  cursor: pointer;
+  z-index: 1000;
+  background: none;
+}
