--- a/src/pages/Project/Project.scss
+++ b/src/pages/Project/Project.scss
@@ -4,7 +4,7 @@
   row-gap: 20px;
   box-sizing: border-box;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(12, 1fr);
 
   @include desktop {
     display: flex;
@@ -15,7 +15,7 @@
 
   &__title {
     @include adaptive-font(60, 38);
-    grid-column: 2/4;
+    grid-column: 3/8;
 
     @include desktop {
       font-size: 38px;
@@ -23,8 +23,11 @@
   }
 
   &__excerpt {
-    @include adaptive-font(21, 16);
-    grid-column: 4/5;
+    @include adaptive-font(19, 16);
+    opacity: 0.7;
+    line-height: 24px;
+    font-weight: 300;
+    grid-column: 10/13;
 
     @include desktop {
       max-width: 500px;
@@ -33,17 +36,10 @@
     @include tablet {
       max-width: 70%;
     }
-
-    p {
-      @include adaptive-font(19, 16);
-      opacity: 0.7;
-      line-height: 24px;
-      font-weight: 300;
-    }
   }
 
   &__tags {
-    grid-column: 4/5;
+    grid-column: 10/13;
   }
 
   &__tag {
@@ -111,7 +107,7 @@
 }
 
 .project__recommend-title {
-  padding: 0 5%;
+  padding: 50px 5% 0 5%;
   @include adaptive-font(24, 18);
 }
 
